include_directories(${ROOT_INCLUDE})

set(acm_sources
   APEX.cc 
   APEX_BLACKBOARD_SERVICES.cc
   APEX_BUFFER_SERVICES.cc 
   APEX_EVENT_SERVICES.cc 
   APEX_HM_SERVICES.cc 
   APEX_INTERFACE_IMPL.cc 
   APEX_PROCESS_SERVICES.cc 
   APEX_QUEUING_SERVICES.cc 
   APEX_SAMPLING_SERVICES.cc 
   APEX_SCHEDULING.cc 
   APEX_SEMAPHORE_SERVICES.cc 
   APEX_TIME_MANAGEMENT_SERVICES.cc 
   BLACKBOARD.cc 
   BUFFER.cc 
   EVENT.cc 
   ACM_LOGGER.cc 
   QUEUE_PORT.cc 
   SAMPLING_PORT.cc 
   ACM_THREAD_SUPPORT.cc 
   PROCESS.cc 
   EVENT_PORT.cc 
   UDPSocket.cpp)


include_directories(${ACM_SOURCE_DIR})
include_directories(${ROOT_INCLUDE})
include_directories(${ROOT_INCLUDE}/ACM/USER/)

ADD_LIBRARY(ACM-1.0 SHARED ${acm_sources})
target_link_libraries(ACM-1.0 rt pthread) 
SET_TARGET_PROPERTIES(ACM-1.0 PROPERTIES LINK_FLAGS "-version-info $(GENERIC_LIBRARY_VERSION) -release $(GENERIC_RELEASE)")
SET_TARGET_PROPERTIES(ACM-1.0 PROPERTIES LINK_FLAGS "${corba_libraries}")

ADD_LIBRARY(ACM-1.0-static STATIC ${acm_sources} ${IDL_GEN_CPP})
SET_TARGET_PROPERTIES(ACM-1.0-static PROPERTIES OUTPUT_NAME "ACM-1.0")
SET_TARGET_PROPERTIES(ACM-1.0-static PROPERTIES PREFIX "lib")
target_link_libraries(ACM-1.0-static  rt pthread) 
SET_TARGET_PROPERTIES(ACM-1.0-static PROPERTIES LINK_FLAGS "-version-info $(GENERIC_LIBRARY_VERSION) -release $(GENERIC_RELEASE)")

INSTALL(DIRECTORY ${ACM_SOURCE_DIR}/include/ACM/ DESTINATION ${library_includedir}/ACM FILES_MATCHING PATTERN "*.h")

INSTALL(TARGETS ACM-1.0 ACM-1.0-static
	LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib )


